--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Information</title>
-
+    <link rel="icon" href="favicon.png">
 
     <style type="text/css">
         .nav{
