--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </svg></a>
             <br>
                 Schematics Credits
-            <a href="https://docs.google.com/document/d/1JChe5XCsc-nWbhNB9pQe9Ro3-ds1NrCO6qh1ORQ3DPY/edit?usp=sharing" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box-arrow-in-up-right" viewBox="0 0 16 16">
+            <a href="https://docs.google.com/document/d/1m-oozVYDd0gGxxC90q7YqsQQosmipO2ds62cmn80D8Q/edit?usp=share_link" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box-arrow-in-up-right" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
                 <path fill-rule="evenodd" d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
             </svg></a>
@@ -180,7 +180,7 @@
             </svg></a>
 
             <br><br>
-            <iframe src="https://drive.google.com/file/d/1IaoYMiWmSEKtwj8Ok452ifhszxNim66_/preview" width="640" height="480" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1ocwM8nuw7EAi19UjZhGw4GW7_4dE7XwZ/preview" width="640" height="480" allow="autoplay"></iframe>
            
             <br><br>
             Project started April 2021 by Matthew Rieckenberg
