--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
         #content{
         font-size: 30px;
         }
+button{
+background-color: #AC75FA;
+}
 
+button:hover{
+    background-color: #5A1380;
+}
 
 
     </style>
@@ -77,6 +83,12 @@
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
+    <script type="text/javascript">
+        function copyText(x) {
+            /* Copy text into clipboard */
+            navigator.clipboard.writeText(x);
+        }
+</script>
 <div class="header-nav">
     <ul class="nav">
         <ul class="nav">
@@ -161,7 +173,7 @@
             <br>
             <h2>Seed (Java 1.17)</h2>
 
-            1938308378592162354
+            <button onclick="copyText(1938308378592162354)">1938308378592162354</button></td>
             <a href="https://www.reddit.com/r/Minecraft/comments/a4gqdu/continent_seed_1938308378592162354_details_in_the/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box-arrow-in-up-right" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
                 <path fill-rule="evenodd" d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
